# stackblur-iter

./: Cargo.toml  LICENSE  README.md
benches/: iai.rs  iai_simd.rs
demo/: Cargo.toml
demo/src/: main.rs
examples/: coz.rs
src/: color.rs  cvt.rs  iter.rs  lib.rs  test.rs  traits.rs
src/color/: mod.rs  serial.rs  simd.rs
