[package]
name = 'stackblur-iter'
version = '0.1.5'
authors = ['LoganDark']
edition = '2021'
rust-version = '1.56'
description = 'A fast, iterative, correct approach to Stackblur, resulting in a very smooth and high-quality output, with no edge bleeding'
documentation = 'https://docs.rs/stackblur-iter'
readme = 'README.md'
repository = 'https://github.com/LoganDark/stackblur-iter'
license = 'MIT'
keywords = ['stackblur', 'blur', 'gaussian']
categories = ['algorithms', 'graphics', 'rendering']
exclude = ['.idea']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blend-srgb = ['dep:blend-srgb']
rayon = ['dep:rayon', 'dep:unique']
simd = ['imgref-iter/simd']
rgb = ['dep:rgb']
rgb_argb = ['rgb', 'rgb/argb']

[dependencies]
imgref = '^1.9.2'
imgref-iter = '~0.3.3'
blend-srgb = { version = '~0.1.1', optional = true }
rayon = { version = '^1.5.3', optional = true }
unique = { version = '~0.9.1', optional = true }
rgb = { version = '^0.8.33', optional = true }

[dev-dependencies]
stackblur = { git = 'https://github.com/LoganDark/stackblur', branch = 'larger-radius' }
iai = '~0.1.1'

[[bench]]
name = 'iai'
harness = false

[[bench]]
name = 'iai_simd'
harness = false
