[package]
name = 'demo'
version = '0.1.0'
edition = '2021'
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = '~0.26.1'
softbuffer = '~0.1.1'
rayon = '^1.5.1'
stackblur = { git = 'https://github.com/LoganDark/stackblur', branch = 'larger-radius' }
stackblur-iter = { path = '..', features = ['blend-srgb', 'simd', 'rayon'] }
